crates/reinhardt-urls/crates/routers-macros/tests/ui/unmatched_close_brace.stderr
error: Unmatched '}' at position 9
       Found closing brace without matching opening brace
 --> tests/ui/unmatched_close_brace.rs:5:20
  |
5 |     let _path = path!("/users/id}/");
  |                       ^^^^^^^^^^^^^
